# caulk

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/: cosmopolitan.cmake
.github/workflows/: release.yml
src/: caulk-gen.c  caulk-test.c  caulk.cpp  caulk.h  gen.c  generator.c  test.c
